Fix HTML and CSS issues, add Players page

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.p-dialog-title {
+  font-weight: bold;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
