--- a/src/index.css
+++ b/src/index.css
@@ -49,29 +49,16 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: 0.2s;
 }
 button:hover {
-  border-color: #646cff;
+  scale: 0.98;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  scale: 1.01;
 }
 
 .p-dialog-title {
   font-weight: bold;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
