--- a/src/index.css
+++ b/src/index.css
@@ -20,18 +20,11 @@
   --background-color: #ffffff;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  background-color: var(--background-color);
   margin: 0;
   padding: 0;
+  height: 100dvh;
   overflow: hidden;
 }
 
@@ -47,7 +40,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: 0.2s;
 }
